--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ html {
 
 #nav_bar_inside_region {
     margin-top: calc(var(--hamburger-button-size) + var(--nav-inside-start) * var(--logo-margin-top));
+    padding-bottom: 50px;
     width: inherit;
     height: calc(100% - (var(--hamburger-button-size) + var(--nav-inside-start) * var(--logo-margin-top)));
     position: fixed;
