--- a/style.css
+++ b/style.css
@@ -118,35 +118,88 @@ a {
     list-style:none;
 }
 
+.tt_category {
+    padding-left: 0;
+}
+
+.tt_category ul {
+    padding-left: 20px;
+}
+
+.tt_category > li > ul {
+    padding-left: 0;
+    margin-top: 10px;
+}
+
+.tt_category .c_cnt {
+    font-size: small;
+    background: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.5);
+    padding: 3px 10px;
+    border-radius: 100px;
+    margin-left: 5px;
+}
+
+.tt_category a {
+    cursor: pointer;
+    display: inline-block;
+    line-height: 30px;
+    height: 30px;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+
+.tt_category a:hover {
+    color: rgb(31, 249, 133);
+}
+
+.tt_category > li > a {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.tt_category > li > ul > li {
+    margin-top: 20px;
+}
+
+/*
+#category_container ul {
+    list-style:none;
+}
+
 #category_container > ul, #category_container > ul > li > ul {
     padding-left: 0;
 }
 
-/* #category_container > ul > li > a {
+ #category_container > ul > li > a {
     display: block;
     background-color: red;
     color: white;
-} */
+} 
 
-/* 카테고리 접는 것에 관한 스타일일 */
-/* 접힌채로 시작 */
+카테고리 접는 것에 관한 스타일일
+접힌채로 시작
 .sub_category_list {
 	display: none;
 }
-/* 화살표 회전 */
+화살표 회전
 .ac-category.expanded .ac-toggle i {
 	transform: rotate(0.5turn);
 }
-/* 화살표 회전 시간 */
+화살표 회전 시간
 .ac-toggle i {
 	transition: .1s
 }
-/* 화살표가 우측에 있다는 내용 */
+화살표가 우측에 있다는 내용
 .ac-category .ac-toggle i {
   float: right;
   padding: 4px;
-  /* pointer-events: none; */
+  pointer-events: none;
 }
+*/
 
 #hamburger_button {
     width: var(--hamburger-button-size);
