--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     font-style: normal;
 }
 
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
 
 #DragSchLayer {
     display: none !important;
@@ -20,6 +22,7 @@
     --logo-margin-top: 10px;
     --nav-inside-start: 4;
     --main-logo-width: 120px;
+    --article_h4_color: rgb(190, 190, 190)
 }
 
 html {
@@ -33,18 +36,18 @@ a {
 * {
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Nanum Gothic';
 }
 
 .nav_bar {
     position: fixed;
-    left: calc(var(--nav-width) * -1);
     top: 0;
     height: calc(var(--vh, 1vh) * 100);
     width: var(--nav-width);
     background: rgb(236, 236, 236);
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
     overflow: auto;
-    transition: all 0.1s;
+    transition: left 0.1s;
 }
 
 #nav_bar_inside_region {
@@ -116,18 +119,10 @@ a {
 
 #category_container ul {
     list-style:none;
-}
-
-.tt_category {
     padding-left: 0;
-}
-
-.tt_category ul {
-    padding-left: 20px;
 }
 
 .tt_category > li > ul {
-    padding-left: 0;
     margin-top: 10px;
 }
 
@@ -161,8 +156,43 @@ a {
     text-align: center;
 }
 
+.tt_category > li > ul > li > a {
+    background: white;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 112%;
+    height: 45px;
+    line-height: 45px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    padding-left: 12px;
+    border-left: 5px orange solid;
+}
+
 .tt_category > li > ul > li {
     margin-top: 20px;
+}
+
+.ul_box {
+    height: auto;
+    transition: grid-template-rows 0.2s;
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
+.ul_box > ul {
+    overflow: hidden;
+}
+
+.ul_box .ul_box {
+    padding-left: 10px;
+    margin-left: 5px;
+    border-left: 2px rgb(0,0,0) solid;
+}
+
+.height_zero {
+    grid-template-rows: 0fr;
 }
 
 /*
@@ -280,13 +310,14 @@ a {
 #main {
     position: relative;
     top: 0;
-    transition: left 0.1s;
+    transition: left 0.1s, filter 0.1s;
+    padding-bottom: 50px;
 }
 
-#main_inside {
+.main_inside_padding {
     width: 100%;
     padding: 0 30px;
-    max-width: 900px;
+    max-width: 950px;
     margin: 0 auto;
 }
 
@@ -310,4 +341,92 @@ textarea {
     font-family: 'MBC';
     font-size: calc(var(--hamburger-button-size) * 0.8);
     line-height: var(--hamburger-button-size);
+}
+
+#difense_div {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: calc(var(--vh, 1vh) * 100);
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+#article_content p, h4, h3, h2, h1 {
+    line-height: 2.2;
+}
+
+#article_content p {
+    font-size: 16px;
+}
+
+#article_content h4 {
+    display: table;
+    padding: 2px 40px 2px 20px;
+    border-left: 10px var(--article_h4_color) solid;
+    border-bottom: 4px var(--article_h4_color) solid;
+    margin: 20px 10px 10px 10px;
+}
+
+#article_content h3 {
+    margin: 50px 0 20px;
+    padding : 2px 20px 2px 20px;
+    background-color: rgba(209, 228, 255, 0.525);
+    border-left: 10px rgba(188, 216, 255, 0.772) solid;
+}
+
+#article_content h2 {
+    text-shadow: 0 0 5px white;
+    display: table;
+    margin: 60px auto;
+    padding: 10px 20px;
+    font-size: 16px; border-radius: 100px;
+    border: rgba(0, 0, 0, 0.5) solid;
+}
+
+#tt-body-page h2[data-ke-size],
+#tt-body-page h3[data-ke-size],
+#tt-body-page h4[data-ke-size] {
+    font-weight: 900;
+}
+
+#article_content code {
+    background-color: rgba(233, 238, 241, 0.532);
+    line-height: 1.5;
+    padding: 30px 20px;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+#article_index_container {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#article_index_container_caption {
+    background-color: antiquewhite;
+    content:'글 목차';
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    line-height: 40px;
+}
+
+#article_index_container_inside {
+    background-color: rgba(0, 255, 255, 0.459);
+    padding: 20px 30px;
+}
+
+#article_index_container_inside a {
+    line-height: 1.7;
+}
+
+#article_index_container_inside ul {
+    padding-left: 0px;
+    list-style: none;
+}
+
+#article_index_container_inside > ul ul {
+    padding-left: 15px;
 }
