--- a/style.css
+++ b/style.css
@@ -353,35 +353,37 @@ textarea {
     display: none;
 }
 
-#article_content p, h4, h3, h2, h1 {
+.tt_article_useless_p_margin p, h4, h3, h2, h1 {
     line-height: 2.2;
 }
 
-#article_content p {
-    font-size: 16px;
+.tt_article_useless_p_margin p {
+    font-size: 15px;
 }
 
-#article_content h4 {
+.tt_article_useless_p_margin h4 {
     display: table;
     padding: 2px 40px 2px 20px;
     border-left: 10px var(--article_h4_color) solid;
     border-bottom: 4px var(--article_h4_color) solid;
     margin: 20px 10px 10px 10px;
+    font-size: 16px;
 }
 
-#article_content h3 {
+.tt_article_useless_p_margin h3 {
     margin: 50px 0 20px;
     padding : 2px 20px 2px 20px;
     background-color: rgba(209, 228, 255, 0.525);
     border-left: 10px rgba(188, 216, 255, 0.772) solid;
+    font-size: 18px;
 }
 
-#article_content h2 {
+.tt_article_useless_p_margin h2 {
     text-shadow: 0 0 5px white;
     display: table;
     margin: 60px auto;
     padding: 10px 20px;
-    font-size: 16px; border-radius: 100px;
+    font-size: 15px; border-radius: 100px;
     border: rgba(0, 0, 0, 0.5) solid;
 }
 
@@ -401,25 +403,38 @@ textarea {
 
 #article_index_container {
     border-radius: 10px;
+    border: 2px rgba(0, 0, 0, 0.553) solid;
     overflow: hidden;
 }
 
 #article_index_container_caption {
-    background-color: antiquewhite;
-    content:'글 목차';
+    font-weight: 900;
+    background-color: rgba(0, 0, 0, 0.553);
     text-align: center;
     display: inline-block;
     width: 100%;
     line-height: 40px;
+    color: white;
 }
 
 #article_index_container_inside {
-    background-color: rgba(0, 255, 255, 0.459);
     padding: 20px 30px;
 }
 
 #article_index_container_inside a {
-    line-height: 1.7;
+    line-height: 30px;
+    color: rgba(0, 0, 0, 0.717);
+    cursor: pointer;
+}
+
+#article_index_container_inside a::after{
+    content: '>';
+    display: inline-block;
+    position: absolute;
+    font-size: 10px;
+    line-height: 30px;
+    transform: translate(5px);
+    
 }
 
 #article_index_container_inside ul {
@@ -428,5 +443,303 @@ textarea {
 }
 
 #article_index_container_inside > ul ul {
-    padding-left: 15px;
+    padding-left: 25px;
+}
+
+#title_article_divide_box > hr {
+    background: rgba(0, 0, 0, 0.662);
+    margin: 0 auto;
+    border-radius: 100%;
+}
+
+.article_admin_button {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-weight: 900;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+.page_move_button {
+    background: rgb(125, 168, 237);
+    padding: 10px 20px;
+    font-weight: 900;
+    border-radius: 100px;
+    color: white;
+}
+
+/* 제작자 : 친절한효자손 */
+/* 티스토리 : https://rgy0409.tistory.com */
+/* 무단 복사 및 재배포 금지 */
+/* 친효애드온 : 신형 댓글+방명록 친효스킨 스타일 */
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > .tt-wrap-cmt > .tt-box-thumb {
+    margin-right: 10px !important;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc {
+    background-color: #f5f5f5;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc::before {
+    content: "◀";
+    left: -10px;
+    color: #f5f5f5;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt {
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-thumb {
+    margin-left: 10px;
+    margin-right: 0 !important;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-box-meta {
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc {
+    float: right;
+    background-color: rgb(123, 123, 123);
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc::before {
+    content: "▶";
+    right: -10px;
+    color: rgb(123, 123, 123);
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc > p {
+    color: #f5f5f5;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-wrap-info {
+    clear: both;
+    justify-content: flex-end;
+}
+
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc,
+.tt-comment-cont > .tt-area-reply > ul.tt-list-reply > li.tt-item-reply.rp_general > ul.tt-list-reply-comment > li.tt-item-reply > .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc {
+    max-width: calc(100% - 100px) !important;
+}
+
+.tt-comment-cont {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 10px;
+}
+
+.tt-comment-cont > .tt-area-reply {
+    padding: 20px 0;
+    margin-top: 20px;
+    margin-bottom: 0 !important;
+}
+
+.tt-comment-cont > .tt-area-reply > .tt-list-reply {
+    display: flex;
+    flex-direction: column-reverse;
+    border-top: none !important;
+    border-bottom: none !important;
+}
+
+.tt-comment-cont > .tt-area-reply > .tt-list-reply > li.tt-item-reply:has(p.tt_cmt_info) {
+    order: 1;
+}
+
+@supports not (selector(:has(*))) {
+    .tt-comment-cont > .tt-area-reply > .tt-list-reply {
+        flex-direction: column;
+    }
+}
+
+.tt-comment-cont > form {
+    padding: 30px 10px 20px;
+}
+
+.tt-comment-cont > form > .tt-area-write .tt-box-account input,
+.tt-comment-cont > form > .tt-area-write .tt-box-textarea .tt-inner-g  {
+    border-radius: 10px !important;
+}
+
+.tt-comment-cont > form .tt-box-thumb {
+    margin-right: 10px !important;
+}
+
+.tt-box-total,
+.tt-item-reply::before {
+    display: none;
+}
+
+.tt-wrap-cmt {
+    padding: 10px;
+}
+
+.tt-box-thumb > a {
+    display: block;
+    position: relative;
+    top: 6px;
+}
+
+.tt-box-thumb span.tt-thumbnail {
+    width: 50px !important;
+    height: 50px !important;
+    border-radius: 15px !important;
+}
+
+.tt-box-thumb span.tt-thumbnail::after {
+    border: none !important;
+    border-radius: 15px !important;
+}
+
+.tt-wrap-cmt .tt-box-meta {
+    margin-bottom: 0 !important;
+}
+
+.tt_cmt_profile {
+    top: 2px;
+}
+
+.tt_ico_profile {
+    position: relative;
+    top: 3px;
+}
+
+.tt-wrap-cmt .tt-link-user {
+    font-size: 12px !important;
+}
+
+.tt-wrap-desc {
+    position: relative;
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 7px;
+}
+
+.tt-wrap-desc::before {
+    display: block;
+    position: absolute;
+    top: -2px;
+}
+
+.tt-wrap-desc > p {
+    font-size: 13px !important;
+}
+
+.tt-wrap-cmt .tt-wrap-info {
+    padding: 2px 0;
+}
+
+.tt-wrap-cmt .tt_date {
+    padding-top: 3px !important;
+    font-size: 9px !important;
+    line-height: 9px !important;
+}
+
+.tt-wrap-cmt .tt-wrap-link-comment {
+    padding-left: 7px !important;
+    line-height: 1 !important;
+    font-size: 9px !important;
+}
+
+.tt-wrap-cmt .tt-wrap-link-comment > a {
+    font-size: inherit !important;
+}
+
+.tt-link-comment .tt_txt_g {
+    padding-top: 0 !important;
+    font-size: 12px !important;
+    line-height: 0.9 !important;
+}
+
+.tt-link-comment .tt_txt_g:hover {
+    color: #f54;
+}
+
+.tt-link-comment .tt_num_g {
+    font-size: 11px !important;
+}
+
+.tt-wrap-cmt .tt-wrap-link-comment::before {
+    display: none !important;
+}
+
+.tt-item-reply {
+    padding: 20px 0 !important;
+}
+
+.tt-item-reply:nth-last-of-type(1),
+.tt-item-reply .tt-list-reply-comment {
+    border-top: none !important;
+}
+
+.tt-list-reply-comment .tt-item-reply {
+    padding: 10px !important;
+    margin: 0 !important;
+    border-top: none !important;
+}
+
+p.tt_cmt_info {
+    margin: 0 0 0 20px !important;
+}
+
+p.tt_cmt_info ~ .tt-wrap-cmt {
+    padding: 10px 10px 30px !important;
+}
+
+p.tt_cmt_info ~ .tt-wrap-cmt > .tt-box-thumb {
+    margin-right: 10px !important;
+}
+
+p.tt_cmt_info ~ .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc {
+    background-color: #f54;
+}
+
+p.tt_cmt_info ~ .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc::before {
+    content: "◀";
+    left: -10px;
+    color: #f54;
+}
+
+p.tt_cmt_info ~ .tt-wrap-cmt > .tt-box-content > .tt-wrap-desc > p {
+    color: #f5f5f5;
+}
+
+.tt-txt-mention {
+    font-size: 12px;
+    border-radius: 5px !important;
+}
+
+.tt_ico_fixed {
+    margin-top: 2px;
+    margin-bottom: 0 !important;
+}
+
+.tt_sns_layer {
+    z-index: 9999;
+}
+
+button.tt_btn_prev_more {
+    padding: 30px 0 30px !important;
+    transition: all .3s;
+}
+
+button.tt_btn_prev_more:hover {
+    color: #f54;
+}
+
+#contents h3.guestbook_title {
+    padding: 5px;
+    border-top: 1px solid #E5E5E5;
+    font-size: 17px;
+}
+
+.article_summery {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
