--- a/style.css
+++ b/style.css
@@ -37,6 +37,32 @@ a {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Nanum Gothic';
+    -webkit-tap-highlight-color : rgba(0,0,0,0);
+}
+
+#welcome_div {
+    opacity: 0;
+    height: calc(var(--vh, 1vh) * 100);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#main_page_down_arrow {
+    animation-name: arrow_move;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes arrow_move {
+    0% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-20px);
+        opacity: 0;
+    }
 }
 
 .nav_bar {
@@ -48,6 +74,7 @@ a {
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
     overflow: auto;
     transition: left 0.1s;
+    opacity: 0;
 }
 
 #nav_bar_inside_region {
@@ -81,11 +108,11 @@ a {
 }
 
 .hr_div {
-    width: 100%;
-    height: 5px;
-    background: rgb(255, 255, 255);
+    height: 2px;
+    background: rgb(0,0,0,0.2);
+    border-radius: 100%;
     
-    margin: 50px 0;
+    margin: 50px auto;
 }
 
 .blog_menu_button_container {
@@ -95,12 +122,12 @@ a {
 }
 
 .blog_menu_button_container > img {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 
 .blog_menu_button_container > div {
-    font-size: 10px;
+    font-size: 12px;
 }
 
 #logo_container {
@@ -145,7 +172,6 @@ a {
 
 
 .tt_category a:hover {
-    color: rgb(31, 249, 133);
 }
 
 .tt_category > li > a {
@@ -167,11 +193,21 @@ a {
     margin-bottom: 5px;
     border-radius: 10px;
     padding-left: 12px;
-    border-left: 5px orange solid;
 }
 
 .tt_category > li > ul > li {
     margin-top: 20px;
+}
+
+.search_container {
+    height: auto;
+    transition: grid-template-rows 0.2s;
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
+#search_container_inside {
+    overflow: hidden;
 }
 
 .ul_box {
@@ -195,6 +231,18 @@ a {
     grid-template-rows: 0fr;
 }
 
+.see_right > i {
+    transition: transform 0.1s;
+    transform: rotate( 0deg );
+}
+.see_down > i {
+    transition: transform 0.1s;
+    transform: rotate( 90deg );
+}
+
+.login_button, .write_box {
+    display: none;
+}
 /*
 #category_container ul {
     list-style:none;
@@ -311,7 +359,6 @@ a {
     position: relative;
     top: 0;
     transition: left 0.1s, filter 0.1s;
-    padding-bottom: 50px;
 }
 
 .main_inside_padding {
@@ -326,7 +373,6 @@ textarea {
 }
 
 #logo {
-    border: dashed;
     height: var(--hamburger-button-size);
     width: var(--main-logo-width);
     margin-left: var(--logo-margin-top);
@@ -337,10 +383,7 @@ textarea {
 }
 
 #logo div {
-    text-align: center;
     font-family: 'MBC';
-    font-size: calc(var(--hamburger-button-size) * 0.8);
-    line-height: var(--hamburger-button-size);
 }
 
 #difense_div {
@@ -530,7 +573,6 @@ textarea {
 .tt-comment-cont {
     display: flex;
     flex-direction: column-reverse;
-    padding: 10px;
 }
 
 .tt-comment-cont > .tt-area-reply {
@@ -585,9 +627,9 @@ textarea {
 }
 
 .tt-box-thumb span.tt-thumbnail {
-    width: 50px !important;
-    height: 50px !important;
-    border-radius: 15px !important;
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 20px !important;
 }
 
 .tt-box-thumb span.tt-thumbnail::after {
@@ -740,6 +782,19 @@ button.tt_btn_prev_more:hover {
 .article_summery {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     overflow: hidden;
+}
+
+.numbox span {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    color: rgb(0, 0, 0, 0.4);
+}
+.numbox .selected{
+    border-radius: 15px;
+    border: 1px solid;
+    color: rgb(0, 0, 0, 0.8);
 }
